# cargo-oh-my-dependencies

./: .dir-locals.el  Cargo.toml  LICENSE  README.md  flake.nix  justfile  notes.org
examples/: metadata.rs  test_install.rs  tree.rs  visit.rs
src/: action.rs  app.rs  args.rs  component.rs  lib.rs  logging.rs  main.rs  mermaid.rs  run.rs  tui.rs
src/cargo/: backup.rs  edit.rs  mod.rs
src/components/: app.rs  dependency_tab.rs  dependency_tree.rs  feature_graph.rs  mod.rs  package_info.rs
src/mermaid/: code_gen.rs  feature_graph.rs  mod.rs
src/metadata/: dep_tree.rs  features.rs  mod.rs  package_resolver.rs  toml.rs  workspace_info.rs
