[package]
name = "cargo-oh-my-dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-tui = "4.0.1"
cargo_metadata = "0.18.1"
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
directories = "5.0.1"
eyre = "0.6.12"
lazy_static = "1.4.0"
open = "5.1.2"
ratatui = "0.26.1"
ratatui-image = { version = "0.8.1", features = ["crossterm"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-file-rotation = "0.3.4"
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-tree-widget = "0.19.0"
