[package]
name = "cargo-oh-my-dependencies"
version = "0.1.1"
edition = "2021"
authors = ["Robert Krahn <robert@kra.hn>"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]
exclude = ["*.bak", "DEV.org", ".dir-locals.el", "notes.org", "scratch.py"]
homepage = "https://github.com/rksm/cargo-oh-my-dependencies"
keywords = ["cargo", "dependencies", "features", "cli"]
license = "MIT"
readme = "README.md"
description = "A cargo plugin to browse and edit crate features across a workspace."

[[bin]]
name = "cargo-omd"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "4.0.1"
cargo_metadata = "0.18.1"
cargo_toml = { version = "0.19.2", features = ["features"] }
clap = { version = "4.5.3", features = ["derive"] }
clap-cargo = "0.14.1"
color-eyre = "0.6.3"
crossterm = "0.27.0"
directories = "5.0.1"
eyre = "0.6.12"
lazy_static = "1.4.0"
open = "5.1.2"
ratatui = "0.26.1"
ratatui-image = { version = "0.8.1", features = ["crossterm"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-file-rotation = "0.3.4"
tempfile = "3.10.1"
toml_edit = "0.22.9"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-tree-widget = "0.19.0"

[dev-dependencies]
insta = { version = "1.36.1", features = ["toml"] }
